--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="body_wrap">
         <header>
-            <div class="logo"><img src="img/max_logo_white.svg"></div>
+            <div class="logo"><img src="https://kyohyunkim.github.io/Team-Max/img/max_logo_white.svg"></div>
             <div class="menu">Menu</div>
         </header>
 
@@ -20,40 +20,40 @@
                 <div class="number">/ 3</div>
                 <div class="title"><p>TEAM MAX</p><span>Amateur Basketball Team</span></div>
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide banner1"><img src="/img/6.jpeg"><p class="">1</p></div>
-                    <div class="swiper-slide banner2"><img src="/img/5.jpeg"><p class="">2</p></div>
-                    <div class="swiper-slide banner3"><img src="/img/7.jpeg"><p class="">3</p></div>
+                    <div class="swiper-slide banner1"><img src="https://kyohyunkim.github.io/Team-Max/img/6.jpeg"><p class="">1</p></div>
+                    <div class="swiper-slide banner2"><img src="https://kyohyunkim.github.io/Team-Max/img/5.jpeg"><p class="">2</p></div>
+                    <div class="swiper-slide banner3"><img src="https://kyohyunkim.github.io/Team-Max/img/7.jpeg"><p class="">3</p></div>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
 
             <ul class="about">
-                <div class="title"><p>About us</p> <img src="img/icon_home_shop_arrow_black.svg"></div>
-                <li class="about_img1"><img src="img/8.jpeg"></li>
+                <div class="title"><p>About us</p> <img src="https://kyohyunkim.github.io/Team-Max/img/icon_home_shop_arrow_black.svg"></div>
+                <li class="about_img1"><img src="https://kyohyunkim.github.io/Team-Max/img/8.jpeg"></li>
                 <ul class="text">
                     <li></li>
                 </ul>
             </ul>
 
             <ul class="photo">
-                <div class="title"><p>Photo</p> <img src="img/icon_home_shop_arrow_black.svg"></div>
-                <li class="about_img1"><img src="img/10.jpeg"></li>
+                <div class="title"><p>Photo</p> <img src="https://kyohyunkim.github.io/Team-Max/img/icon_home_shop_arrow_black.svg"></div>
+                <li class="about_img1"><img src="https://kyohyunkim.github.io/Team-Max/img/10.jpeg"></li>
                 <ul class="text">
                     <li></li>
                 </ul>
             </ul>
 
             <ul class="video">
-                <div class="title"><p>Video</p> <img src="img/icon_home_shop_arrow_black.svg"></div>
-                <li class="about_img1"><img src="img/11.jpeg"><p class="play_btn"><img src="img/play_w.svg"></p></li>
+                <div class="title"><p>Video</p> <img src="https://kyohyunkim.github.io/Team-Max/img/icon_home_shop_arrow_black.svg"></div>
+                <li class="about_img1"><img src="https://kyohyunkim.github.io/Team-Max/img/11.jpeg"><p class="play_btn"><img src="https://kyohyunkim.github.io/Team-Max/img/play_w.svg"></p></li>
                 <ul class="text">
                     <li></li>
                 </ul>
             </ul>
             <div class="top_btn">
                 <a href="#">
-                    <img class="aside_arrow" src="img/aside_arrow.svg">
-                    <img class="aside_img" id="aside_img" src="img/aside.svg">
+                    <img class="aside_arrow" src="https://kyohyunkim.github.io/Team-Max/img/aside_arrow.svg">
+                    <img class="aside_img" id="aside_img" src="https://kyohyunkim.github.io/Team-Max/img/aside.svg">
                 </a>
             </div>
         </main>
@@ -74,11 +74,11 @@
                 </li>
             </ul>
             <div class="my">
-                <div class="insta" onclick="location.href='https://instagram.com/max_ketball?igshid=NWRhNmQxMjQ=';"><span>SNS</span><div>Insta<img src="img/insta_logo_blk.svg"><img src="img/icon_footer_link.png"></div></div>
-                <div class="email"><span>E-mail</span><div><a href="mailto:kimwc97@gmail.com">kimwc97@gmail.com</a><img src="img/icon_footer_link.png"></div></div>
+                <div class="insta" onclick="location.href='https://instagram.com/max_ketball?igshid=NWRhNmQxMjQ=';"><span>SNS</span><div>Insta<img src="https://kyohyunkim.github.io/Team-Max/img/insta_logo_blk.svg"><img src="https://kyohyunkim.github.io/Team-Max/img/icon_footer_link.png"></div></div>
+                <div class="email"><span>E-mail</span><div><a href="mailto:kimwc97@gmail.com">kimwc97@gmail.com</a><img src="https://kyohyunkim.github.io/Team-Max/img/icon_footer_link.png"></div></div>
                 <div class="site"><span>Site-by</span>
-                    <div><a href="mailto:jonghan721@gmail.com">jonghan721@gmail.com</a><img src="img/icon_footer_link.png"></div>
-                    <div><a href="mailto:rlarygus33@gmail.com">rlarygus33@gmail.com</a><img src="img/icon_footer_link.png"></div>
+                    <div><a href="mailto:jonghan721@gmail.com">jonghan721@gmail.com</a><img src="https://kyohyunkim.github.io/Team-Max/img/icon_footer_link.png"></div>
+                    <div><a href="mailto:rlarygus33@gmail.com">rlarygus33@gmail.com</a><img src="https://kyohyunkim.github.io/Team-Max/img/icon_footer_link.png"></div>
                 </div>
             </div>
         </footer>
