--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
 </head>
 <body>
     <div class="body_wrap">
-        <header>
+        <header id="header">
             <div class="logo"><img src="https://kyohyunkim.github.io/Team-Max/img/max_logo_white.svg"></div>
-            <div class="menu">Menu</div>
+            <div class="menu" id="menu">MENU</div>
+            <div class="nav" id="nav">
+                <div>about us</div>
+                <div>photo</div>
+                <div>video</div>
+            </div>
         </header>
-
+        
         <main>
             <div class="swiper mySwiper">
                 <div class="number">/ 3</div>
