--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class="body_wrap">
         <header id="header">
-            <div class="logo"><img src="https://kyohyunkim.github.io/Team-Max/img/max_logo_white.svg"></div>
+            <div class="logo" onclick="location.href='index.html';"><img src="https://kyohyunkim.github.io/Team-Max/img/max_logo_white.svg"></div>
             <div class="menu" id="menu">MENU</div>
             <div class="nav" id="nav">
-                <div>about us</div>
+                <div onclick="location.href='about.html';">about us</div>
                 <div>photo</div>
                 <div>video</div>
             </div>
@@ -23,11 +23,11 @@
         <main>
             <div class="swiper mySwiper">
                 <div class="number">/ 3</div>
-                <div class="title"><p>TEAM MAX</p><span>Amateur Basketball Team</span></div>
+                
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide banner1"><img src="https://kyohyunkim.github.io/Team-Max/img/6.jpeg"><p class="">1</p></div>
-                    <div class="swiper-slide banner2"><img src="https://kyohyunkim.github.io/Team-Max/img/5.jpeg"><p class="">2</p></div>
-                    <div class="swiper-slide banner3"><img src="https://kyohyunkim.github.io/Team-Max/img/7.jpeg"><p class="">3</p></div>
+                    <div class="swiper-slide banner1"><img src="https://kyohyunkim.github.io/Team-Max/img/6.jpeg"><p class="number">1</p><div class="title"><p>TEAM MAX</p><span>Amateur Basketball Team</span></div></div>
+                    <div class="swiper-slide banner2"><img src="https://kyohyunkim.github.io/Team-Max/img/5.jpeg"><p class="number">2</p><div class="title"><p class="orange">TEAM MAX</p><span class="orange">Amateur Basketball Team</span></div></div>
+                    <div class="swiper-slide banner3"><img src="https://kyohyunkim.github.io/Team-Max/img/7.jpeg"><p class="number">3</p><div class="title"><p>TEAM MAX</p><span>Amateur Basketball Team</span></div></div>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
