--- a/about.html
+++ b/about.html
@@ -14,9 +14,10 @@
             <div class="logo" onclick="location.href='index.html';"><img src="https://kyohyunkim.github.io/Team-Max/img/max_logo_white.svg"></div>
             <div class="menu" id="menu">MENU</div>
             <div class="nav" id="nav">
-                <div>about us</div>
-                <div>photo</div>
-                <div>video</div>
+                <div onclick="location.href='index.html';">Home</div>
+                <div onclick="location.href='about.html';">about us</div>
+                <div onclick="location.href='photo.html';">photo</div>
+                <div onclick="location.href='video.html';">video</div>
             </div>
         </header>
         
