--- a/photo.html
+++ b/photo.html
@@ -48,6 +48,14 @@
                         <div class="day"><span>&#8226;</span><span>xxxx.xx.xx</span></div>
                     </div>
                 </div>
+
+                <div class="page">
+                    <img src="img/left_arrow.svg" class="left">
+                    <div class="number">1</div>
+                    <div class="number">2</div>
+                    <div class="number">3</div>
+                    <img src="img/right_arrow.svg" class="right">
+                </div>
             </div>
         </main>
 
