--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div onclick="location.href='index.html';">Home</div>
                 <div onclick="location.href='about.html';">about us</div>
                 <div onclick="location.href='photo.html';">photo</div>
-                <div onclick="location.href='video.html';">video</div>
+                <div onclick="location.href='https://instagram.com/max_ketball?igshid=NWRhNmQxMjQ=';">video</div>
             </div>
         </header>
         
@@ -49,7 +49,7 @@
                 </ul>
             </ul>
 
-            <ul class="video" onclick="location.href='video.html';">
+            <ul class="video" onclick="location.href='https://instagram.com/max_ketball?igshid=NWRhNmQxMjQ=';">
                 <div class="title"><p>Video</p> <img src="https://kyohyunkim.github.io/Team-Max/img/icon_home_shop_arrow_black.svg"></div>
                 <li class="about_img1"><img src="https://kyohyunkim.github.io/Team-Max/img/11.jpeg"><p class="play_btn"><img src="https://kyohyunkim.github.io/Team-Max/img/play_w.svg"></p></li>
                 <ul class="text">
