--- a/photo.html
+++ b/photo.html
@@ -17,7 +17,7 @@
                 <div onclick="location.href='index.html';">Home</div>
                 <div onclick="location.href='about.html';">about us</div>
                 <div onclick="location.href='photo.html';">photo</div>
-                <div onclick="location.href='video.html';">video</div>
+                <div onclick="location.href='https://instagram.com/max_ketball?igshid=NWRhNmQxMjQ=';">video</div>
             </div>
         </header>
         
