--- a/about.html
+++ b/about.html
@@ -22,6 +22,7 @@
         </header>
         
         <main class="main_about">
+            <div class="main_about_img"><img src="https://kyohyunkim.github.io/Team-Max/img/8.jpeg"></div>
             <ul class="wrap">
                 <div class="title">About</div>
                 <li class="detail">
