--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                 </li>
                 <li class="day">
                     <span>Every week</span>
-                    Seturday,Sunday
+                    Saturday,Sunday
                 </li>
                 <li class="time">
                     <span>Time</span>
