--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </li>
                 <li class="day">
                     <span>Every week</span>
-                    Seturday,Sunday
+                    Saturday,Sunday
                 </li>
                 <li class="time">
                     <span>Time</span>
