--- a/photo.html
+++ b/photo.html
@@ -67,7 +67,7 @@
                 </li>
                 <li class="day">
                     <span>Every week</span>
-                    Seturday,Sunday
+                    Saturday,Sunday
                 </li>
                 <li class="time">
                     <span>Time</span>
