--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <ul>
                 <li class="area">
                     <span>Area</span>
-                    Seoul, Mapo
+                    Seoul - Yongsan, Mapo
                 </li>
                 <li class="day">
                     <span>Every week</span>
