--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
             <ul>
                 <li class="area">
                     <span>Area</span>
-                    Seoul, Mapo
+                    Seoul - Yongsan, Mapo
                 </li>
                 <li class="day">
                     <span>Every week</span>
