--- a/photo.html
+++ b/photo.html
@@ -63,7 +63,7 @@
             <ul>
                 <li class="area">
                     <span>Area</span>
-                    Seoul, Mapo
+                    Seoul - Yongsan, Mapo
                 </li>
                 <li class="day">
                     <span>Every week</span>
